--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,18 +1,26 @@
-name: Hugging Face Exercise
+name: Hugging Face Exercise CI
 
 on: [push]
+
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js
-      uses: actions/setup-node@v1
+    - name: Checkout
+      uses: actions/checkout@master
+
+    - name: Set Node.js 15.x
+      uses: actions/setup-node@master
       with:
-        node-version: '15.x'
-    - name: Change directory to backend
-      run: cd backend
+        version: 15.x
+
     - name: Install dependencies
-      run: npm install
-    - name: Test backend
-      run: npm run test:all
+      working-directory: ./backend
+      run: |
+        npm install
+
+    - name: Launch all tests
+      working-directory: ./backend
+      run: |
+        npm run test:all
+
