--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "ts-node src/adapters/primary/startServer.ts",
     "start:json": "REPOSITORIES=JSON npm start",
+    "start:elastic": "REPOSITORIES=ELASTIC npm start",
     "test:unit": "jest --watchAll --testRegex=.unit.test.ts --verbose",
     "test:e2e": "REPOSITORIES=JSON jest --runInBand --watchAll --testRegex=.e2e.test.ts --verbose",
     "test:integration": "jest --runInBand --testRegex=.integration.test.ts --watchAll --verbose",
@@ -16,6 +17,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/cors": "^2.8.10",
+    "@types/elasticsearch": "^5.0.37",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.14",
     "@types/supertest": "^2.0.10",
@@ -33,9 +35,12 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^7.12.0",
     "@types/ramda": "^0.27.40",
     "axios": "^0.21.1",
     "cors": "^2.8.5",
+    "elastic": "^0.1.10",
+    "elasticsearch": "^16.7.2",
     "express": "^4.17.1",
     "ramda": "^0.27.1",
     "ts-node": "^9.0.0",
