--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cli-progress": "^3.9.1",
     "@types/cors": "^2.8.10",
     "@types/elasticsearch": "^5.0.37",
     "@types/express": "^4.17.8",
@@ -36,12 +37,16 @@
   },
   "dependencies": {
     "@elastic/elasticsearch": "^7.12.0",
+    "@types/nodegit": "^0.27.2",
     "@types/ramda": "^0.27.40",
     "axios": "^0.21.1",
+    "cli-progress": "^3.9.0",
     "cors": "^2.8.5",
     "elastic": "^0.1.10",
     "elasticsearch": "^16.7.2",
     "express": "^4.17.1",
+    "fs-extra": "^10.0.0",
+    "nodegit": "^0.27.0",
     "ramda": "^0.27.1",
     "ts-node": "^9.0.0",
     "uuid": "^8.3.0",
